works with corrections lets add the animation and flipping wrap this thing...

--- a/css/effects.css
+++ b/css/effects.css
@@ -238,6 +238,21 @@
 }
 
 
+@keyframes madechoide {
+  0% {
+    transform: scale(1.2);
+  }
+
+  90% {
+    
+    
+  }
+  100% {
+    transform: scale(0.2);
+  }
+}
+
+
 
 
 
